Finally figured out how to connect styles scss functionality also works

--- a/server/main/static/main/main.css
+++ b/server/main/static/main/main.css
@@ -1,3 +1,5 @@
-._3C6s0XrpAVoUhiMWihtPNB {
+._2vUjcQqgq6Q1M2qhEfPZGq {
   color: green; }
+  ._2vUjcQqgq6Q1M2qhEfPZGq:hover {
+    color: white; }
 
