--- a/server/main/templates/main/index.html
+++ b/server/main/templates/main/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+  {% load static %}
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Django REST with React</title>
+  <link rel="stylesheet" href="{% static "main/main.css" %}">
+  <title>Django with React test</title>
 </head>
 <body>
 <div id="app">
     <!-- React will load here -->
 </div>
 </body>
-{% load static %}
+
 <script src="{% static "main/main.js" %}"></script>
 </html>
